# PtychoFwdBench

./: .gitignore  .pre-commit-config.yaml  README.md  benchmarks.py  multislice_blobs.py  ptycho_pyram_beam.py  ptycho_pyram_blobs.py  pyproject.toml  run_benchmarks.py
.github/workflows/: ci.yml
configs/: blobs_default.yml  branching_default.yml  fibres_default.yml  gravel_default.yml  grin_default.yml  waveguide_default.yml
docs/: benchmark.md  generators.md  index.md  installation.md  solvers.md
ptycho_fwd_bench/: benchmarking.py  generators.py  physics.py  plotters.py  ptycho_solvers.py  solver_factory.py  utils.py
ptycho_fwd_bench/pyram/: LICENSE.md  PyRAM.py  PyRAMmp.py  outpt.py
ptycho_fwd_bench/pyram/Tests/: TestPyRAM.py  TestPyRAMmp.py  tl_ref.line
ptycho_fwd_bench/solvers/: __init__.py  base.py  finite_difference_pade.py  multislice.py  spectral_pade.py  utils.py
ptycho_fwd_bench/sssp/: README.md  SSSP.py  pade.py
pyram/: PyRAM.py  matrc.py  outpt.py  solve.py
pyram_ptycho/: benchmarking.py  generators.py  plotters.py  ptycho_solvers.py  utils.py
pyram_ptycho/pyram/: PyRAM.py  __init__.py  matrc.py  solve.py
pyram_ptycho/pyram/Tests/: __init__.py
src/ptycho_fwd_bench/: generators.py  physics.py  solver_factory.py  utils.py
src/ptycho_fwd_bench/pyram/: PyRAM.py  PyRAMmp.py
src/ptycho_fwd_bench/pyram/Tests/: TestPyRAM.py  TestPyRAMmp.py
src/ptycho_fwd_bench/solvers/: base.py  spectral_pade.py
src/ptycho_fwd_bench/sssp/: README.md  pade.py
tests/: test_benchmarking.py  test_generators.py  test_physics.py  test_solvers.py  test_utils.py
