[project]
name = "ptycho-fwd-bench"
version = "0.1.0"
description = "X-ray Ptychography benchmark suite. Forked/Adapted from 'pyram' (Acoustics) by Marcus Donnelly."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }

authors = [
    { name = "Bryce Shirley", email = "bryce.shirley@stfc.ac.uk" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

# COMBINED DEPENDENCIES:
dependencies = [
    "numpy>=1.25",
    "numba>=0.58",
    "scipy",
    "matplotlib",
    "pyyaml",
    "ruff>=0.14.14",
    "pytest>=8.4.2",
    "tqdm>=4.67.1",
    "matplot2tikz>=0.4.2",
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ptycho_fwd_bench"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.14",
]
