[project]
name = "ptycho-fwd-bench"
version = "0.1.0"
description = "X-ray Ptychography benchmark suite. Forked/Adapted from 'pyram' (Acoustics) by Marcus Donnelly."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }

authors = [
    { name = "Bryce Shirley", email = "bryce.shirley@stfc.ac.uk" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

# RUNTIME DEPENDENCIES
dependencies = [
    "numpy>=1.25",
    "numba>=0.58",
    "scipy",
    "matplotlib",
    "pyyaml",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptycho_fwd_bench"]

# DEV DEPENDENCIES
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.9.1",
]

[tool.ruff.lint]
# T201 checks for print(), T203 checks for pprint(), B = common bugs, I = import sorting
extend-select = ["T201", "T203", "B", "I"]
